test_files/parser/Syntax_syntax.txt
Syntax error at line 27 in class APPLICATION

            print(c.out)(
        end
--------^


-------------------------------------------------------------------------------
